--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "Issuer": "http://localhost:5076/",
+    "Audience": "http://localhost:5076/",
+    "SigningKey": "bigmike"
+  }
+
+
 }
